--- a/app/src/main/res/layout/skill_iq_template.xml
+++ b/app/src/main/res/layout/skill_iq_template.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/viewpager_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +11,7 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        app:cardElevation="0.2dp"
         app:cardUseCompatPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,7 @@
             <ImageView
                 android:id="@+id/badgeImageSkillIq"
                 android:layout_width="100dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
                 android:layout_marginStart="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +75,13 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
                         android:text="Egypt"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="."
                         android:textSize="12sp" />
 
                 </LinearLayout>
