--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -106,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view">
@@ -144,6 +144,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
+                            android:textColorHint="@color/colorAsh3"
                             android:hint="First Name"
                             android:fontFamily="@font/roboto"
                             android:inputType="textPersonName"
@@ -165,6 +166,7 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:hint="Surname"
+                            android:textColorHint="@color/colorAsh3"
                             android:fontFamily="@font/roboto"
                             android:inputType="textPersonName"
                             android:textStyle="bold" />
@@ -179,7 +181,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -190,6 +192,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email Address"
+                        android:textColorHint="@color/colorAsh3"
                         android:fontFamily="@font/roboto"
                         android:inputType="textEmailAddress"
                         android:textStyle="bold" />
@@ -203,7 +206,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -214,6 +217,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
+                        android:textColorHint="@color/colorAsh3"
                         android:hint="Project on GITHUB (link)"
                         android:inputType="text"
                         android:textStyle="bold" />
@@ -224,7 +228,7 @@
                     android:id="@+id/submit_button"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="70dp"
+                    android:layout_marginTop="90dp"
                     android:background="@drawable/orange_custom_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
