--- a/app/src/main/res/layout/learning_leaders_template.xml
+++ b/app/src/main/res/layout/learning_leaders_template.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/viewpager_background"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -10,9 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:background="@android:color/white"
         app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        app:cardElevation="0.2dp"
         app:cardUseCompatPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             <LinearLayout
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="@+id/badge_image_hours"
                 app:layout_constraintStart_toEndOf="@+id/badge_image_hours"
@@ -76,6 +76,13 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
                         android:text="Kenya"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="."
                         android:textSize="12sp" />
 
                 </LinearLayout>
