--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,7 @@
         <item name="boxStrokeColor">@color/colorWhite</item>
         <item name="boxStrokeWidth">4dp</item>
         <item name="boxBackgroundColor">@color/colorWhiteBackground2</item>
-        <item name="android:textColorHint">@color/colorBlack</item>
+        <item name="hintEnabled">false</item>
         <item name="android:textColor">@color/colorBlack</item>
         <item name="colorPrimary">@color/colorWhite</item>
         <item name="colorPrimaryDark">@color/colorWhite</item>
