GADS LEADERBOARD PROJECT COMPLETED

--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -144,6 +144,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
+                            android:cursorVisible="false"
                             android:textColorHint="@color/colorAsh3"
                             android:hint="First Name"
                             android:fontFamily="@font/roboto"
@@ -165,6 +166,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
+                            android:cursorVisible="false"
                             android:hint="Surname"
                             android:textColorHint="@color/colorAsh3"
                             android:fontFamily="@font/roboto"
@@ -192,6 +194,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email Address"
+                        android:cursorVisible="false"
                         android:textColorHint="@color/colorAsh3"
                         android:fontFamily="@font/roboto"
                         android:inputType="textEmailAddress"
@@ -217,6 +220,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
+                        android:cursorVisible="false"
                         android:textColorHint="@color/colorAsh3"
                         android:hint="Project on GITHUB (link)"
                         android:inputType="text"
