Editext cursor visibility hidden

--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -146,6 +146,7 @@
                             android:ems="10"
                             android:textColorHint="@color/colorAsh3"
                             android:hint="First Name"
+                            android:cursorVisible="false"
                             android:fontFamily="@font/roboto"
                             android:inputType="textPersonName"
                             android:textStyle="bold" />
@@ -166,6 +167,7 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:hint="Surname"
+                            android:cursorVisible="false"
                             android:textColorHint="@color/colorAsh3"
                             android:fontFamily="@font/roboto"
                             android:inputType="textPersonName"
@@ -192,6 +194,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email Address"
+                        android:cursorVisible="false"
                         android:textColorHint="@color/colorAsh3"
                         android:fontFamily="@font/roboto"
                         android:inputType="textEmailAddress"
@@ -217,6 +220,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
+                        android:cursorVisible="false"
                         android:textColorHint="@color/colorAsh3"
                         android:hint="Project on GITHUB (link)"
                         android:inputType="text"
