--- a/app/src/main/res/drawable-xhdpi/orange_custom_button_shadow.xml
+++ b/app/src/main/res/drawable-xhdpi/orange_custom_button_shadow.xml
@@ -2,15 +2,16 @@
 <layer-list xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Gray shadow. -->
-    <item android:top="5dp">
+    <item android:top="5dp"
+        android:right="25dp" android:left="25dp">
         <shape>
-            <solid android:color="@color/colorAsh4" />
+            <solid android:color="@color/colorAsh7" />
 <!--            <corners android:radius="25dp" />-->
             <corners android:radius="25dp"/>
         </shape>
     </item>
     <!-- White foreground. -->
-    <item android:bottom="3dp" android:left="1dp" android:right="1dp">
+    <item android:bottom="2dp" android:right="2dp" android:left="2dp">
         <shape>
             <solid android:color="@color/colorDarkOrange"/>
             <corners android:radius="25dp"/>
