--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="colorAsh3">#757575</color>
     <color name="colorAsh4">#4e4e4c</color>
     <color name="colorAsh5">#eeeeee</color>
+    <color name="colorAsh6">#141414</color>
+    <color name="colorAsh7">#4d4d4d</color>
 </resources>
