--- a/app/src/main/res/drawable/viewpager_background.xml
+++ b/app/src/main/res/drawable/viewpager_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorAsh5"/>
-    <stroke android:color="@color/colorAsh5" android:width="3dp" />
+    <solid android:color="@color/colorWhiteBackground2"/>
+    <!--    <stroke android:color="@color/colorAsh5" android:width="3dp" />-->
 
 </shape>
